# SecretVault

./: .gitignore  Cargo.toml
src/: api.rs  crypt.rs  main.rs
