[package]
name = "secret_vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
log = "0.4.22"
rand = "0.8.5"
rustbreak = { version = "2.0.0", features = ["ron_enc"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
